tests/baselines/reference/library-reference-5.errors.txt
/node_modules/bar/node_modules/alpha/index.d.ts(1,13): error TS2403: Subsequent variable declarations must have the same type.  Variable 'alpha' must be of type 'any', but here has type '{}'.


==== /src/root.ts (0 errors) ====
    /// <reference types="foo" />
    /// <reference types="bar" />
    
==== /node_modules/foo/index.d.ts (0 errors) ====
    /// <reference types="alpha" />
    declare var foo: any;
    
==== /node_modules/foo/node_modules/alpha/index.d.ts (0 errors) ====
    declare var alpha: any;
    
==== /node_modules/bar/index.d.ts (0 errors) ====
    /// <reference types="alpha" />
    declare var bar: any;
    
==== /node_modules/bar/node_modules/alpha/index.d.ts (1 errors) ====
    declare var alpha: {};
                ~~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'alpha' must be of type 'any', but here has type '{}'.
!!! related TS6203 /node_modules/foo/node_modules/alpha/index.d.ts:1:13: 'alpha' was also declared here.
    